@@ -13,7 +13,11 @@ from Products.Silva import interfaces
 #python
 from types import StringType
 
-module_security = AccessControl.ModuleSecurityInfo('Products.Silva.adapters.tocrendering')
+DEFAULT_SHOW_TYPES = ['Silva Document', 'Silva Link',
+                      'Silva Folder', 'Silva Publication',]
+module_security = AccessControl.ModuleSecurityInfo(
+    'Products.Silva.adapters.tocrendering')
+
 
 def escape(thestring):
     thestring = thestring.replace('&','&amp;')
@@ -21,8 +25,10 @@ def escape(thestring):
     thestring = thestring.replace('>','&gt;')
     return thestring
 
+
 class TOCRenderingAdapter(adapter.Adapter):
-    """ Adapter for TOCs (autotoc, document toc) to render"""
+    """Adapter for TOCs (autotoc, document toc) to render.
+    """
 
     __allow_access_to_unprotected_subobjects__ = 1
 
@@ -64,9 +70,11 @@ class TOCRenderingAdapter(adapter.Adapter):
             items = [ o[1] for o in items ]
         return items
 
-    def _get_tree_iterator(self, container, indent=0, toc_depth=-1,sort_order='silva',show_types=['Silva Document','Silva Folder', 'Silva Publication']):
-        """yield for every element in this toc
-        The 'depth' argument limits the number of levels, defaults to unlimited
+    def _get_tree_iterator(
+        self, container, indent=0, toc_depth=-1, sort_order='silva',
+        show_types=DEFAULT_SHOW_TYPES):
+        """Yield for every element in this toc. The 'depth' argument
+        limits the number of levels, defaults to unlimited.
         """
         items = self._get_container_items(container,sort_order,show_types)
 
@@ -82,11 +90,14 @@ class TOCRenderingAdapter(adapter.Adapter):
                 for (dep,o) in self._get_tree_iterator(item, indent + 1, toc_depth=toc_depth,sort_order=sort_order,show_types=show_types):
                     yield (dep,o)
 
-    def _get_public_tree_iterator(self, container, indent=0, include_non_transparent_containers=0, toc_depth=-1,sort_order='silva',show_types=['Silva Document','Silva Folder', 'Silva Publication']):
+    def _get_public_tree_iterator(
+        self, container, indent=0, include_non_transparent_containers=0,
+        toc_depth=-1, sort_order='silva', show_types=DEFAULT_SHOW_TYPES):
         toc_filter = self.context.service_toc_filter
         items = self._get_container_items(container,sort_order,show_types)
         for (name,item) in items:
-            if not (item.is_published() or interfaces.IAsset.providedBy(item)) or \
+            if not (item.is_published() or
+                    interfaces.IAsset.providedBy(item)) or \
                    (name=='index'):
                 continue
             if toc_filter.filter(item):
@@ -96,14 +107,16 @@ class TOCRenderingAdapter(adapter.Adapter):
                 (item.is_transparent() or \
                  include_non_transparent_containers))  and \
                 (toc_depth == -1 or indent < toc_depth):
-                for (dep,o) in self._get_public_tree_iterator(item, indent+1,
-                                                   include_non_transparent_containers,toc_depth=toc_depth,sort_order=sort_order,show_types=show_types):
+                for (dep,o) in self._get_public_tree_iterator(
+                    item, indent+1, include_non_transparent_containers,
+                    toc_depth=toc_depth,sort_order=sort_order,
+                    show_types=show_types):
                     yield (dep,o)
 
-    def render_tree(self, public=1, append_to_url=None, toc_depth=-1,
-                    display_desc_flag=False, sort_order="silva",
-                    show_types=['Silva Document', 'Silva Publication', 'Silva Folder'],
-                    show_icon=False):
+    def render_tree(
+        self, public=1, append_to_url=None, toc_depth=-1,
+        display_desc_flag=False, sort_order="silva",
+        show_types=DEFAULT_SHOW_TYPES, show_icon=False):
         if isinstance(append_to_url,StringType):
             if append_to_url[0] != '/':
                 append_to_url = '/' + append_to_url
@@ -114,7 +127,8 @@ class TOCRenderingAdapter(adapter.Adapter):
         #or all items to render in this TOC.  The functions use yields
         #to generate the lists.  Rendering is sped up since the list
         #is only iterated through once.
-        func = public and self._get_public_tree_iterator or self._get_tree_iterator
+        func = public and self._get_public_tree_iterator or \
+            self._get_tree_iterator
         html = []
         a_templ = '<a href="%s%s">%s</a>'
 
@@ -155,7 +169,7 @@ class TOCRenderingAdapter(adapter.Adapter):
                 html.append('</li></ul>')
                 depth -= 1
         return '\n'.join(html)
-    
+
 Globals.InitializeClass(TOCRenderingAdapter)
 
 def __allow_access_to_unprotected_subobjects__(name,value=None):
